--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
+  "name": "damagedeposit",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "hardhat": "^2.17.1"
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.9.3"
+    "@openzeppelin/test-helpers": "^0.5.16"
   }
 }
